Removed align-self baseline on checked icon to fix a display bug

--- a/frontend/style/components/todos.scss
+++ b/frontend/style/components/todos.scss
@@ -25,7 +25,6 @@
     &-completed-icon {
       color: $header-font-color;
       font-size: 1.5rem;
-      align-self: baseline;
       &:hover {
         cursor: pointer;
       }
